[package]
name = "keep"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
edition = "2018"

[dependencies]
tui = "0.8"
termion = "1.5"
failure = "0.1"
chrono = "0.4"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "1.2"
dirs = "2.0"
