[package]
name = "forget"
version = "1.5.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Command line todo in Rust."
repository = "https://github.com/DevinR528/forget"
keywords = ["todo", "cli", "productivity", "console", "terminal"]
categories = ["development-tools", "text-editors"]
edition = "2018"
readme = "README.md"
exclude = [ "resources" ]

[badges]
travis-ci = { repository = "DevinR528/forget" }

[dependencies]
tui = "0.8"
termion = "1.5"
failure = "0.1"
chrono = "0.4"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "1.2"
dirs = "2.0"
